--- a/app/src/main/res/layout/content_stats.xml
+++ b/app/src/main/res/layout/content_stats.xml
@@ -1,6 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"><!--"-->
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="strength:"
+            android:textAlignment="textEnd"
+            android:layout_marginEnd="8dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        </TextView>
+        <ProgressBar
+            android:id="@+id/strengthProgressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:max="100"
+            android:progress="50"
+            android:background="#44F60000"
+            android:progressTint="#FF0000"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"><!--"-->
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="intelligence:"
+            android:textAlignment="textEnd"
+            android:layout_marginEnd="8dp">
+
+        </TextView>
+        <ProgressBar
+            android:id="@+id/intelligence"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:max="100"
+            android:progress="50"
+            android:background="#6EFFB300"
+            android:progressTint="#FFB300"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"><!--"-->
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="speed:"
+            android:textAlignment="textEnd"
+            android:layout_marginEnd="8dp">
+
+        </TextView>
+        <ProgressBar
+            android:id="@+id/speed"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:max="100"
+            android:progress="50"
+            android:background="#730048FF"
+            android:progressTint="#0048FF"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"><!--"-->
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="durability:"
+            android:textAlignment="textEnd"
+            android:layout_marginEnd="8dp">
+
+        </TextView>
+        <ProgressBar
+            android:id="@+id/durability"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:max="100"
+            android:progress="50"
+            android:background="#6A6FFF00"
+            android:progressTint="#6FFF00"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"><!--"-->
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="power:"
+            android:textAlignment="textEnd"
+            android:layout_marginEnd="8dp">
+
+        </TextView>
+        <ProgressBar
+            android:id="@+id/power"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:max="100"
+            android:progress="50"
+            android:background="#70FA7E01"
+            android:progressTint="#FA7E01"
+            />
+    </LinearLayout><LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"><!--"-->
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="combat:"
+        android:textAlignment="textEnd"
+        android:layout_marginEnd="8dp">
+
+    </TextView>
+    <ProgressBar
+        android:id="@+id/combat"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:max="100"
+        android:progress="50"
+        android:background="#4000FFF3"
+        android:progressTint="#00FFF3"
+        />
+</LinearLayout>
+
+</LinearLayout>
